test/parallel/taskPar/taskIntents/undefinedOuterVar-cobegin.good
undefinedOuterVar-cobegin.chpl:4: error: could not find the outer variable for 'undefinedVar'
